--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,16 @@
         <meta-data
             android:name="com.google.android.gms.client_id"
             android:value="@string/server_client_id" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.niclauscott.jetdrive.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
