--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ googlePlay = "21.0.0"
 reorderable = "2.5.1"
 
 media3 = "1.7.1"
+workRuntimeKtx = "2.10.2"
 
 [libraries]
 nav3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "nav3Core" }
@@ -46,6 +47,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVers
 koin-navGraph = { group = "io.insert-koin", name = "koin-androidx-navigation", version.ref = "koinversion" }
 koin-startUp = { group = "io.insert-koin", name = "koin-androidx-startup", version.ref = "koinversion" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koinversion" }
+koin-workmanager = { group = "io.insert-koin", name = "koin-androidx-workmanager", version.ref = "koinversion" }
 
 compose-viemodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodelVersion" }
 
@@ -101,6 +103,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
